# ImageSegmentation

./: .gitignore  README.md  graph.cpp  graph.hpp  main.cpp  makefile  metricTesting.ipynb  prGraph.cpp  prGraph.hpp  run.sh
graphcut-master/AAProject/: yigraph.cpp  yimain.cpp
images/: bird.pgm  sailboat.pgm  test1L.pgm  test2.pgm  test2L.pgm  test3.pgm
maxflow/: mainwindow.cpp  mainwindow.h  maxflow.pro
thobauma/: CMakeLists.txt  bitmap.cpp  bitmap.h  bitmap.hpp  graph.cpp  graph.h  graph.hpp  main.cpp  makefile  metricTesting.ipynb
thobauma/images/: debug.pgm  peppers.pgm  test1.pgm  test3L.pgm
